Use small viewport sizes to avoid overflow

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@
 }
 
 #root {
-  height: 100lvh;
-  width: 100lvw;
+  height: 100svh;
+  width: 100svw;
 }
 
 * {
